# aspensqlplus-fmt

./: .gitignore  README.md
formatter/: Cargo.toml
formatter/src/: diagnostics.rs  main.rs  options.rs  sqlfmt.rs
vscode-extension/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: binaryManager.ts  extension.ts
