[package]
name = "aspensqlplus-fmt"
version = "0.1.0"
edition = "2021"
authors = ["Germán Martín Heim <german.martin.heim@gmail.com>"]
description = "Aspen SQLplus formatter CLI"
readme = "../README.md"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
thiserror = "2.0.12"
anyhow = "1.0"
similar = "2.4"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
